--- a/Hand Gesture CNN .ipynb
+++ b/Hand Gesture CNN .ipynb
@@ -12,14 +12,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Dataset : [Hand Gesture Recognition Dataset](https://www.kaggle.com/gti-upm/leapgestrecog)"
+    "## Dataset : [Hand Gesture Recognition Dataset](https://www.kaggle.com/gti-upm/leapgestrecog)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[WinError 3] The system cannot find the path specified: '../input'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-2-a7cf4ce3b0bb>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlistdir\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"../input\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [WinError 3] The system cannot find the path specified: '../input'"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "print(os.listdir(\"../input\"))"
@@ -120,8 +134,8 @@
     "reverselookup = dict()\n",
     "count = 0\n",
     "for j in os.listdir('../input/leapgestrecog/leapGestRecog/00/'):\n",
-    "    if not j.startswith('.'): \n",
-    "                              \n",
+    "    if not j.startswith('.'): # If running this code locally, this is to \n",
+    "                              # ensure you aren't reading in hidden folders\n",
     "        lookup[j] = count\n",
     "        reverselookup[count] = j\n",
     "        count = count + 1\n",
@@ -140,7 +154,7 @@
     "datacount = 0 # We'll use this to tally how many images are in our dataset\n",
     "for i in range(0, 10): # Loop over the ten top-level folders\n",
     "    for j in os.listdir('../input/leapgestrecog/leapGestRecog/0' + str(i) + '/'):\n",
-    "        if not j.startswith('.'): \n",
+    "        if not j.startswith('.'): # Again avoid hidden folders\n",
     "            count = 0 # To tally images of a given gesture\n",
     "            for k in os.listdir('../input/leapgestrecog/leapGestRecog/0' + \n",
     "                                str(i) + '/' + j + '/'):\n",
@@ -170,7 +184,7 @@
     "fig.set_size_inches(15,15)\n",
     "for i in range(2):\n",
     "    for j in range (5):\n",
-    "        l=rn.randint(0,len(y_data))  \n",
+    "        l=rn.randint(0,len(y_data))  # len(y_data)=20000\n",
     "        ax[i,j].imshow(x_data[l])\n",
     "        ax[i,j].set_title(reverselookup[y_data[l,0]])\n",
     "        \n",
@@ -356,13 +370,6 @@
     "show_history('acc', 'val_acc')\n",
     "show_history('loss', 'val_loss')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
